<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="context"
            type="com.iamverycute.desk.fragment.AboutFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@android:color/white"
                android:padding="4dp"
                android:text="@string/about"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/white"
                android:paddingStart="4dp"
                android:text="@string/about"
                android:textIsSelectable="true"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/opensource"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/link_item_pressed"
                    android:gravity="center"
                    android:onClick="@{context}"
                    android:paddingTop="3dp"
                    android:paddingBottom="6dp"
                    android:text="@string/opensource"
                    android:textColor="@drawable/link_item_pressed"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/feedback"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/link_item_pressed"
                    android:gravity="center"
                    android:onClick="@{context}"
                    android:paddingTop="3dp"
                    android:paddingBottom="6dp"
                    android:text="@string/bugreport"
                    android:textColor="@drawable/link_item_pressed"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/icon_pack_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details"
                android:layout_marginTop="50dp"
                android:adapter="@{context.adapter}"
                android:onItemSelectedListener="@{context}"
                android:selectedItemPosition="@{context.selectIndex}"
                android:textSize="34sp" />

            <Button
                android:id="@+id/default_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:alpha="@{context.activity.packageName.equals(context.defaultPackageName)?0f:1f}"
                android:onClick="@{context}"
                android:text="@string/set_default" />
        </RelativeLayout>
    </ScrollView>
</layout>